# Booking-a-Hotel-Room

./: .env.dev  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.bookingroom_db/postgres/: postmaster.pid
.bookingroom_db/postgres/base/13757/: pg_internal.init
.bookingroom_db/postgres/base/16384/: 1247  1249  1259  16385  16386  16391  16393  16394  16397  16399  16401  16402  16405  16407  16411  16413  16415  16419  16421  16422  16425  16427  16428  16429  16430  16433  16435  16441  16442  16443  16447  16448  16449  16450  16451  16452  16453  16455  16457  16461  (+77 more)
.bookingroom_db/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
.bookingroom_db/postgres/pg_stat/: db_0.stat  db_13757.stat  db_16384.stat  global.stat
.bookingroom_db/postgres/pg_stat_tmp/: db_0.stat  db_13757.stat  db_16384.stat  global.stat
BookingHottelRoom/: manage.py
BookingHottelRoom/BookingHottelRoom/: asgi.py  settings.py  urls.py  wsgi.py
BookingHottelRoom/room/: endpoints.py  models.py  urls.py  views.py
BookingHottelRoom/room/migrations/: 0001_create_model_room.py  0001_create_room_model.py  0002_create_booking_model.py
BookingHottelRoom/users/: admin.py  endpoints.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
BookingHottelRoom/users/migrations/: 0001_create_user_model.py  0001_create_users_model.py  0002_create_booking_model.py
